--- a/examples/example-gateway/endpoints/bar/endpoint-config.json
+++ b/examples/example-gateway/endpoints/bar/endpoint-config.json
@@ -11,6 +11,7 @@
 			"arg_with_query_header.json",
 			"arg_with_params.json",
 			"arg_with_many_query_params.json",
+			"echo_string.json",
 			"missing_arg.json",
 			"no_request.json",
 			"normal.json",
