allow return type as primitive

--- a/examples/example-gateway/clients/bar/client-config.json
+++ b/examples/example-gateway/clients/bar/client-config.json
@@ -5,18 +5,19 @@
 		"thriftFile": "clients/bar/bar.thrift",
 		"thriftFileSha": "{{placeholder}}",
 		"exposedMethods": {
-			"Normal": "Bar::normal",
-			"NormalRecur": "Bar::normalRecur",
-			"NoRequest": "Bar::noRequest",
-			"MissingArg": "Bar::missingArg",
-			"TooManyArgs": "Bar::tooManyArgs",
 			"ArgNotStruct": "Bar::argNotStruct",
 			"ArgWithHeaders": "Bar::argWithHeaders",
-			"ArgWithQueryParams": "Bar::argWithQueryParams",
-			"ArgWithNestedQueryParams": "Bar::argWithNestedQueryParams",
-			"ArgWithQueryHeader": "Bar::argWithQueryHeader",
 			"ArgWithManyQueryParams": "Bar::argWithManyQueryParams",
+			"ArgWithNestedQueryParams": "Bar::argWithNestedQueryParams",
 			"ArgWithParams": "Bar::argWithParams",
+			"ArgWithQueryHeader": "Bar::argWithQueryHeader",
+			"ArgWithQueryParams": "Bar::argWithQueryParams",
+			"Hello": "Bar::helloWorld",
+			"MissingArg": "Bar::missingArg",
+			"NoRequest": "Bar::noRequest",
+			"Normal": "Bar::normal",
+			"NormalRecur": "Bar::normalRecur",
+			"TooManyArgs": "Bar::tooManyArgs",
 
 			"EchoI8": "Echo::echoI8",
 			"EchoI16": "Echo::echoI16",
